--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,34 +13,35 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-18 Sat 22:15]
+#+CAPTION: Clock summary at [2017-03-19 Sun 12:02]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *52:10* |       |       | 100.0 |
+| *Total time*                                                                | *54:30* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 52:10   |       |       | 100.0 |
-| Active                                                                      |         | 52:10 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   1.9 |
+| Stories                                                                     | 54:30   |       |       | 100.0 |
+| Active                                                                      |         | 54:30 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:18 |   6.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.8 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   5.7 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |   9.7 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  10.3 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  15.9 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.0 |
+| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   5.4 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |   9.3 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |   9.8 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  15.3 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   4.8 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
-| COMPLETED Fix issues with dropbox downloads                                 |         |       |  3:38 |   7.0 |
+| COMPLETED Fix issues with dropbox downloads                                 |         |       |  3:38 |   6.7 |
 | STARTED Create a UML profile to formalise yarn concepts                     |         |       |  0:23 |   0.7 |
-| STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
+| STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.3 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
-| STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.3 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:15 |  38.8 |
+| STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.2 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.2 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:18 |  37.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-03-19 Sun 09:45]--[2017-03-19 Sun 12:02] =>  2:17
     CLOCK: [2017-03-09 Thu 07:10]--[2017-03-09 Thu 07:22] =>  0:12
     CLOCK: [2017-03-07 Tue 21:31]--[2017-03-07 Tue 21:36] =>  0:05
     CLOCK: [2017-03-07 Tue 21:24]--[2017-03-07 Tue 21:30] =>  0:06
